Avoid menu scrolling issues on mobile

--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -1,14 +1,15 @@
 #levelSelector {
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-width: 600px;
 }
 
 #levelSelector>div {
   position: absolute;
   padding: 2px 10px 40px;
-  width: 100vw;
+  width: calc(100% - 10px);
   max-width: 600px;
   font-family: notesFont;
   font-style: normal;
@@ -22,8 +23,9 @@
     "type  name         status      close"
     ".     description  description ."
     "info  info         info        info"
-    "start start start  start";
-  gap: 10px;  
+    "start start        start       start";
+  gap: 10px;
+  filter: brightness(95%);
 }
 
 .levelType {
@@ -94,6 +96,7 @@
 #levelSelector>div.levelSelected {
   z-index: 1000 !important;
   cursor: inherit;
+  filter: inherit;
 }
 
 #levelSelector>div.levelSelected .levelCloseButton {
